[B]Version 0.2.9 - 18 Sep 2016[/B]
- YoDesi Catchup TV added
- Remove bundled html5lib and six

[B]Version 0.2.8 - 6 Sep 2016[/B]
- Malayalam Live TV added
- Moviefisher Domain change


[B]Version 0.2.7 - 4 Sep 2016[/B]
- APKLand Tamil Live TV added
- Tamilgun Domain change
- New site Thiruttuvcds

[B]Version 0.2.6 - 20 Aug 2016[/B]
- Fix Filmlinks parser due to site changes

[B]Version 0.2.5 - 18 Aug 2016[/B]
- Fix run tamil parser due to site changes

[B]Version 0.2.4 - 16 Aug 2016[/B]
- Fix parsers due to site changes

[B]Version 0.2.3 - 12 Aug 2016[/B]
- Fix parser errors in RedMovies
- Add RunTamil Scraper

[B]Version 0.2.2 - 9 Aug 2016[/B]
- Fix parser errors in Android Platform
- Add MovieFisher Scraper

[B]Version 0.2.1 - 7 Aug 2016[/B]
- Fix thumbnails in Tamilgun
- Filmlinks4u Domain change fix

[B]Version 0.2.0 - 5 Aug 2016[/B]
- First release