@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addons>
-<addon id="plugin.video.deccandelight" name="Deccan Delight" version="0.2.9" provider-name="gujal">
+<addon id="plugin.video.deccandelight" name="Deccan Delight" version="0.3.0" provider-name="gujal">
     <requires>
         <import addon="xbmc.python" version="2.20.0"/>
         <import addon="script.module.urlresolver" version="1.0.0"/>
